<resources>
    <string name="app_name">Купонъ</string>

    <string name="title_login">Вход</string>
    <string name="login_username_hint">Потребителско име</string>
    <string name="login_password_hint">Парола</string>
    <string name="login_button_text">Вход</string>


    <string name="title_home">Начало</string>

    <string name="title_business">Търсене</string>
    <string name="business_details_buy_voucher_button_text">Купи ваучер</string>
    <string name="buy_voucher_voucher_spinner_hint">Избери ваучер</string>
    <string name="buy_voucher_card_spinner_hint">Избери карта</string>
    <string name="buy_voucher_buy_button_text">Купи</string>

    <string name="add_card_card_number_hint">Номер на карта</string>
    <string name="add_card_card_expiry_date_hint">ммгг</string>
    <string name="add_card_cvv_hint">CVV</string>
    <string name="add_card_save_button_text">Запази</string>

    <string name="title_notifications">Notifications</string>
</resources>
