<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_login"
        android:name="bg.qponer.android.ui.login.LoginFragment"
        android:label="@string/title_login" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="bg.qponer.android.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_businesses"
        android:name="bg.qponer.android.ui.business.BusinessListFragment"
        android:label="Search"
        tools:layout="@layout/fragment_business_list" />

    <fragment
        android:id="@+id/navigation_business_details"
        android:name="bg.qponer.android.ui.business.BusinessDetailsFragment"
        tools:layout="@layout/fragment_business_details" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="bg.qponer.android.ui.card.AddCardFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_add_card" />

</navigation>
