<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.login.LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/login_username_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/login_password_hint"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/usernameContainer"
        app:layout_constraintStart_toStartOf="@id/usernameContainer"
        app:layout_constraintTop_toBottomOf="@id/usernameContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_button_text"
        android:theme="@style/Widget.MaterialComponents.Button"
        app:layout_constraintEnd_toEndOf="@id/passwordContainer"
        app:layout_constraintStart_toStartOf="@id/passwordContainer"
        app:layout_constraintTop_toBottomOf="@id/passwordContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>